templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-ego-server
  namespace: vault
  labels:
    app: vault-ego-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-ego-app
  template:
    metadata:
      labels:
        app: vault-ego-app
    spec:
      tolerations:
      - key: kubernetes.azure.com/sgx_epc_mem_in_MiB
        operator: Exists
        effect: NoSchedule
      containers:      
      - name: vault-ego-helm-chart
        image: marvinwolf/ego-vault-test:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8200
        resources:
          limits:
            kubernetes.azure.com/sgx_epc_mem_in_MiB: 100
