templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-ego-service
  namespace: vault
spec:
  selector:
    app: vault-ego-app
  ports:
    - protocol: TCP
      port: 8200
      targetPort: 8200
  type: ClusterIP
